--- a/.gitignore
+++ b/.gitignore
@@ -39,3 +39,10 @@ yarn-debug.log*
 
 # Ignore vendor
 /vendor
+
+/public/packs
+/public/packs-test
+/node_modules
+/yarn-error.log
+yarn-debug.log*
+.yarn-integrity
